--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -143,25 +143,34 @@ Again, the error is of the order of $\Delta t$ and is roughly halved by halving 
 \subsection{Convergence Tests}
 
 The next step in testing the implementation will be to perform a convergence test in time. 
-We omit the spatial convergence test because chances are very good that an incorrect implementation of the spatial derivative would be clearly visible both in the visualization of the simulation (the solution blows up), and in the error plot seeing as the spatial error would dominate.
+We omit the spatial convergence test because an incorrect implementation of the spatial derivative would be clearly visible both in the visualization of the simulation (the solution blows up), and in the error plot seeing as the spatial error would dominate.
 We carry out the convergence test by doing several simulations with different values for $\Delta t$ and comparing the errors by equation \ref{convergence_rate_def}. 
 A result of such an experiment for the FE scheme using the $\Delta t$ values listed below is found in figure \ref{convergence_test_FE}. 
 The expected value of r is approximately 1. The result is not perfect, but still close to 1. 
 For the BE scheme we get the convergence rate shown in figure \ref{convergence_test_BE}. Again, the expected order of convergence is 1 and this time the result is almost perfect.
+
+\begin{equation}\label{convergence_rate_def}
+ r = \frac{\ln(E_{i+1}/E_i)}{\ln(\Delta t_{i+1}/\Delta t_i)}
+\end{equation}
+
 \begin{lstlisting}
  dt = [1e-4,1e-5,1e-6,1e-7,1e-8]
 \end{lstlisting}
+
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.7]{../doc/results/experiment_27112013_1017/results/ConvergenceTest.eps}
+ \begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{../doc/results/experiment_27112013_1017/results/ConvergenceTest.eps}
  \caption{Convergence test for the FE scheme. The x axis is $\ln(\Delta t)$.}
- \label{convergence_test_FE}
-\end{figure}
-\begin{figure}[H]
- \centering
- \includegraphics[scale=0.7]{../doc/results/experiment_13012014_0925_Simple1DConvergenceTestBE/results/ConvergenceTest.eps}
+ \label{convergence_test:FE}
+\end{subfigure}
+\begin{subfigure}[b]{0.48\textwidth}
+ \includegraphics[width=\textwidth]{../doc/results/experiment_13012014_0925_Simple1DConvergenceTestBE/results/ConvergenceTest.eps}
  \caption{Convergence test for the BE scheme. The x axis is $\Delta t$, the y-axis (though a little hard to see) is zoomed in around r=1.}
- \label{convergence_test_BE}
+ \label{convergence_test:BE}
+\end{subfigure}
+\caption{Convergence tests for explicit and implicit schemes solving the simple diffusion equation (eq. \ref{simple_diffusion_equation}).}
+\label{convergence_test}
 \end{figure}
 
 We can also do a convergence test, equal to the one we did in 1d, to check that the scheme converges to 1 (by equation \ref{convergence_rate_def}) for smaller $\Delta t$. 
@@ -208,7 +217,7 @@ from the initial condition. This finally gives us the exact numerical solution o
 \end{equation}
 
 Notice that we have not used the approximation to the spatial derivative, but rather the analytical derivative. 
-We can find the approximation that the computer uses to the spatial derivative in the same way as for the time derivative. 
+We find the approximation that the computer uses to the spatial derivative in the same way as for the time derivative. 
 \begin{align*}
  u^0_{xx} &= \frac{1}{\Delta x^2}\left(\cos(\pi(x+\Delta x)) -2\cos(\pi x) +\cos(\pi(x-\Delta x))\right) \\
  &= \frac{2}{\Delta x^2}\left(\cos(\pi\Delta x)-1\right)\cos(\pi x)\\
@@ -216,7 +225,7 @@ We can find the approximation that the computer uses to the spatial derivative i
  &= \frac{4}{\Delta x^2}\left(\cos(\pi\Delta x)-1\right)^2\cos(\pi x)\\
  &\dots
 \end{align*}
-We can immediately see that this pattern continues, and we get the general formula in equation \ref{numerical_solution} for the exact numerical solution.
+We immediately see that this pattern continues, and we get the general formula in equation \ref{numerical_solution} for the exact numerical solution.
 \begin{equation}\label{numerical_solution}
   u^{n+1} = \sum\limits_{i=0}^n {n\choose i}\left(D\Delta t\right)^i\frac{2^i}{\Delta x^{2i}}\left(\cos(\pi\Delta x)-1\right)^i\cos(\pi x)
 \end{equation}
@@ -224,7 +233,7 @@ We expect the FE scheme to represent this solution more or less to machine preci
 There are, however two issues with the solution \ref{numerical_solution}:
 \begin{itemize}
  \item $\Delta x^{2i}$ will quickly tend to zero, and the computer will interpret it as zero. This will cause division by zero, which again ruins the simulation. This can be fixed rather simply by testing if $\Delta x^{2i}>0$ and returning zero if the test returns false.
- \item ${n\choose i}$ goes to infinity for large n and i. We will eventually (for $n>\sim170$) meet overflow. Figure \ref{convergence_exact_numerical_1d_n145} shows that at least for relatively few time steps  we can drop the troublesome terms.
+ \item ${n\choose i}$ goes to infinity for large n and i. We will eventually (for $n>\sim170$) meet overflow. Figure \ref{convergence_exact_numerical_1d_n145} shows that at least for relatively few time steps  we can drop the troublesome terms, but effectively this limits ous simulation to some 170 steps.
 \end{itemize}
 
 \begin{figure}[H]
@@ -241,15 +250,15 @@ The results from testing the FE scheme are found in figure \ref{errorplot_numeri
  \caption[Verification for exact numerical solution]{Error plot for 1d FE scheme compared to the exact numerical solution \ref{numerical_solution} with the modifications suggested earlier.}
  \label{errorplot_numerical_exact_FE_1D}
 \end{figure}
-Doing the same tests is 2D gives slightly different results; adding a 2D walk-domain has an influence on the error, but a rather small one. 
-This can, however be tweaked by increasing the conversion parameters.
+
+We find the exact numerical solution to the 2d diffusion equaiton with eq \ref{initial_condition_2d_numex} as initial condition by using the same method as we did in 1d. 
+The exact numerical solution of the FE scheme can be found in equation \ref{exact_numerical_solution_2d}, and again we expect the scheme to be able to reproduce this to more or less machine precision. 
 
 \begin{equation}\label{initial_condition_2d_numex}
  u(x,y,t=0) = \cos(\pi x)\cos(\pi y)
 \end{equation}
 
-The exact numerical solution of the FE scheme can be found in equation \ref{exact_numerical_solution_2d}, and again we expect the scheme to be able to reproduce this to more or less machine precision. 
-The result of a test simulation of this, using the initial condition in equation \ref{initial_condition_2d_numex}, is shown in figure \ref{exact_numerical_2d_n130}. 
+The result of a test simulation of this is shown in figure \ref{exact_numerical_2d_n130}. 
 Again, as in we did in 1d, we see that although the error is very small, and start out with machine precision, it does increase and even more than in the 1d case. 
 This is \emph{probably} because of the terms we have do drop in the exact numerical solution due to overflow and so on, which accumulate in the numerical solution from the scheme. 
 We should, in other words, be pleased that the error starts out with machine precision, and stays small for the amount of time steps we can simulate and still have something to compare it with.
@@ -269,7 +278,7 @@ We should, in other words, be pleased that the error starts out with machine pre
 
 
 
-To verify our implementation, and perhaps gain some new knowledge we will do some testing on the random walks implementation as well. 
+To verify our implementation, and perhaps gain some new insight we will do some testing on the random walks implementation as well. 
 This means that we have to find a solution of the diffusion equation \ref{simple_diffusion_equation} for an initial condition we can recreate with random walkers to the best possible precision. 
 The absolute simplest initial condition to recreate is the Heaviside step function, defined in equation \ref{Heaviside_def}. 
 \begin{equation}\label{Heaviside_def}
@@ -294,7 +303,8 @@ where the primes denotes the respective derivatives. We separate the equation us
  F''(x) -\lambda F(x) = 0 \implies F(x) = C_1\exp(\sqrt{\lambda}x) + C_2\exp(-\sqrt{\lambda}x)
 \end{align*}
 Where $C$, $C_1$ and $C_2$ are arbitrary constants. 
-Choosing $\lambda = -\mu^2$ lets us rewrite the spatial solution in terms of sines and cosines
+Choosing $\lambda = -\mu^2$ lets us rewrite the spatial solution in terms of sines and cosines. 
+There are really three choises here; $\lambda = -\mu^2$, $\lambda = \mu^2$ and $\lambda = ?$ but we chose the former because the results of the other choises are unphysical.
 \begin{equation*}
  F(x) = a\cos(\mu x) + b\sin(\mu x)
 \end{equation*}
@@ -302,7 +312,7 @@ The boundary conditions gives us
 \begin{align*}
  F'(0)T(t) = F'(1)T(t) = 0
 \end{align*}
-Since the time dependent solution cannot be exactly zero, the first derivative of the spatial solution must be zero
+Since the time dependent solution cannot be exactly zero and is independen of position by construction ($C\exp(\lambda t)|_{x=0} = C\exp(\lambda t) \neq 0$), the first derivative of the spatial solution must be zero at the boundaries
 \begin{align*}
  F'(x) &= -a\mu\sin(\mu x) + b\mu\cos(\mu x) \\
  F'(0) &= -a \mu\sin(0) + b\mu\cos(\mu x) = b\mu\cos(\mu x) \implies b=0 \\
@@ -324,24 +334,21 @@ which gives us the final solution
 \begin{equation}
  u(x,t) = \frac{1}{2} + \sum\limits_{n=1}^\infty \frac{2\sin(\frac{n\pi}{2})}{n\pi}\exp\left(-(n\pi)^2t\right)\cos(n\pi x)
 \end{equation}
+This will be the manufactures solution we will test our simulations against for the verification of the RW implemetation.
 
-We can now perform a convergence test to find the convergence rate for the random walkers, this is the order the error of the scheme goes as and it is defined in equation \ref{convergence_rate_def}. 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+We can now perform a convergence test to find the convergence rate for the random walkers.
 We will modify it slightly by testing for the number of walkers rather than the time step. 
-We must also use another error estimate $E_i$ which gives us one number for each simulation. 
-The candidates are either the maximum of the error we are already using, or an integrated error.
 
-\begin{equation}\label{convergence_rate_def}
- r = \frac{\ln(E_{i+1}/E_i)}{\ln(\Delta t_{i+1}/\Delta t_i)}
-\end{equation}
 
 Using the maximum of the error measure already in use, we have tested the convergence rate measure for the following measures of Hc:
 \begin{lstlisting}
  Hc = [200,1400,5600,10400,32000]
 \end{lstlisting}
-Meaning that the largest value of Hc we will get an estimate for is $Hc = 10000$. 
 The convergence test suggests that the convergence rate for random walks follows the proportionality in equation \ref{convergence_rate_RW}. 
 This relation tells us just what we have been expecting the whole time; while increasing the number of walkers will reduce the error, the convergence is slow. 
-Should we wish to do so, we can force the error to $\mathcal{O}(\Delta t^2)$, but this will be extremely inefficient. In fact we can find the relation as $Hc\sim\Delta t^{-2}$ for $err\sim\mathcal{O}(\Delta t)$, and $Hc\sim\Delta t^{-4}$ for $err\sim\mathcal{O}(\Delta t^2)$. Clearly we will have enough trouble for the simpler cases.
+Should we wish to do so, we can force the error to $\mathcal{O}(\Delta t^2)$, but this will be extremely inefficient. In fact we can find the relation as $Hc\sim\Delta t^{-2}$ for $\epsilon\sim\mathcal{O}(\Delta t)$, and $Hc\sim\Delta t^{-4}$ for $\epsilon\sim\mathcal{O}(\Delta t^2)$. Clearly we will have enough trouble for the simpler cases.
 
 \begin{equation}\label{convergence_rate_RW}
 err \propto Hc^{\frac{-1}{2}}
@@ -375,12 +382,12 @@ As a simplified analogy to our method for solving the diffusion equation we ca l
 \begin{equation}\label{ODE}
  \frac{\d f}{\d x} = a(x)\;\text{,}\; x\in [a,c]
 \end{equation}
-Equation \ref{ODE} is easily solvable (see eq. \ref{ODE_solution}), for the sake of illustration we also specify that $a(x) = \frac{1}{x}$ and divide the integral in two parts, introducing $b\in (a,c)$.
+Equation \ref{ODE} is easily solvable (see eq. \ref{ODE_solution}). For the sake of illustration we also specify that $a(x) = \frac{1}{x}$ and divide the integral in two parts, introducing $b\in (a,c)$.
 \begin{equation}\label{ODE_solution}
  f(x) = \int\limits_a^b a(x)\,dx + \int\limits_b^c a(x)\,dx
 \end{equation}
 This is a case where we have complete control over all parts of the solution which is $f(x) = f(b)-f(a) + f(c)-f(b)$, and we can solve the two parts of the integral in two different ways; by the midpoint method and by MC integration. The convergence rates of these methods are $2$ and $0.5$ respectively. 
-By the relation we found earlier (eq. \ref{}) the number of MC samples should be proportionate to the resolution used by the midpoint-rule to the power of four. 
+By the relation we found in chapter \ref{} (eq. \ref{}) the number of MC samples should be proportionate to the resolution used by the midpoint-rule to the power of four. 
 \begin{align*}
  \frac{1}{\sqrt{N}} \simeq \Delta x^2 \\
  N \simeq \frac{1}{\Delta x^4} = N_x^4
@@ -425,6 +432,7 @@ Starting off, we have a 2d simulation of isotropic diffusion with $\Delta t = 0.
  \label{errorplot_combined_BE2d}
 \end{figure}
 
+%%%%%%%%%%% Cut this %%%%%%%%%%%%%%%%%%%%%%%%%
 
 We then introduce an area on the domain where we switch models from the normal PDE to an average of the PDE solution and the result of a random walk simulation where the initial condition is the last time step from the PDE converted to walkers by the conversion rate given in equation \ref{conversion_rate}. In this case we have used the parameters $a=3$, $\Delta t = \frac{\Delta x^2}{3.0}$, $\Delta x = \frac{1}{20}$. 
 These parameters makes one unit of $u(x,t)$ equal to some $1000$ walkers. 
@@ -437,23 +445,7 @@ One ``unit'' of $ U_{ij}$ will directly correspond to $Hc$ random walkers.
 \begin{equation}\label{definition_Hc_first}
  Hc =  \frac{a}{\Delta t} \implies C_{ij} = Hc\cdot U_{ij}
 \end{equation}
-
-The area where the model has been replaced is between $x=0.6$ and $x=0.7$, which is three mesh points. 
-In the same way as for only the simple 1D PDE case we compare the combined numerical solution from the two models to the exact solution. 
-Figure \ref{errorplot_FE1D_Walk_first_attemt} shows that the error is still of the order of $\Delta t$, and the difference between the two models are negligible. 
-
-\begin{figure}[H]
-\centering
-\includegraphics[scale=0.7]{../doc/results/experimen(t_i)t_31102013_1017/results/errorplot.eps}
-\caption[Effect of increasing number of walkers]{Numerical error for 1D Forward Euler discretization combined with random walk model between $x=0.6$ and $x=0.7$. Other parameters of importance are $\Delta t\approx 0.00083333$, $\Delta x = 0.05$.}
-\label{errorplot_FE1D_Walk_first_attemt}
-\end{figure}
-
-As we can see from figure \ref{errorplot_FE1D_Walk_first_attemt} increasing the number of walkers that each ``unit concentration'' corresponds to has a positive effect on the error norm up to a certain point. 
-After we reach $Hc \sim 10^4$ the error is dominated by the truncation error of the Forward Euler scheme. 
-This tells us that the error associated with introducing a random walk model on parts of the mesh behaves roughly as we hoped; it tends to zero for large numbers of walkers. 
-Meaning of course that the calculations in section \ref{} are not hopeless.
-
+%%%%%%%%%%% And paste somewhere smart %%%%%%%%%%
 
 \subsection{Increasing the time step and the relative size of walk-area}\label{increasing_dt}
 
@@ -534,80 +526,6 @@ This particular equation has steady state $u(t\to\infty,x) = 0$, and so not havi
 \caption{}
 \label{errorplot_FE_walk_long:deterministic}
  \end{subfigure}
-\caption[Errorplot, long simulation]{The deterministic errory
-
- Current goal:
-Beat Brock, then head to Mt Moon. and the error from simulations with walkers for long simulations.}
+\caption[Errorplot, long simulation]{The deterministic error and the error from simulations with walkers for long simulations.}
 \label{errorplot_FE_walk_long}
 \end{figure}
-
-\subsection{The effects of adding drift to the walkers}\label{effect_of_drift_on_walkers}
-
-As shown in section \ref{random_walks_and_drift} adding drift to the walkers will modify our model to represent the convection diffusion equation (\ref{convection_diffusion_equation}) rather than the simple diffusion equation. 
-In our analysis so far we have completely ignored the spatial truncation error because it is of second order, and the truncation error in time is of first order. 
-When discretizing the convection diffusion equation however, we must take care to use an approximation to the first order spatial derivative that has a truncation error of second order. 
-
-Otherwise the truncation error in this term will completely dominate seeing as $\Delta t<\Delta x$. 
-We must also find a new stability criterion for the scheme. \\
-As for now, the Leap-frog discretization will do (though it is not by far a perfect choice seeing as it is unstable). 
-As a side note we can also note that the Neumann boundary condition will be very clear in this scheme. 
-$\frac{\d C}{\d n} = 0 \implies \frac{\d C}{\d x} = 0 $ on the boundary, leading to $C_{-1} = C_{1}$ on the boundary and canceling the drift term on the boundary.
-\begin{equation}\label{convection_diffusion_equation_leapfrog}
- C^{n+1} = \frac{D\Delta t}{\Delta x^2}\left(C^n_{i+1}-2C^n_i+C^n_{i-1}\right)-\frac{v\Delta t}{2\Delta x}\left(C^n_{i+1}-C^n_{i-1}\right) + C^n
-\end{equation}
-The truncation error for the first order derivative using the Leap-frog scheme is obtained as follows
-\begin{align*}
- u(t,x+\Delta x) = u(t,x) + \frac{\d u(t,x)}{\d x}\Delta x + \frac{\d^2u(t,x)}{2\d x^2}\Delta x^2 +\mathcal{O}(\Delta x^3)\\
- u(t,x-\Delta x) = u(t,x) - \frac{\d u(t,x)}{\d x}\Delta x + \frac{\d^2u(t,x)}{2\d x^2}\Delta x^2 +\mathcal{O}(\Delta x^3)
-\end{align*}
-which we recognize as the same error we got from the second order spatial derivatives.\\
-If we now do the same analysis as we have already done, by finding a manufactured solution to the convection diffusion equation, implementing a numerical scheme like \ref{convection_diffusion_equation_leapfrog} to solve it after and taking the error norm. \\
-The error norm does not have to go as $\Delta t$, but it must be halved (approximately) if we halve $\Delta t$. 
-Figure \ref{} shows two simulations of equation \ref{convection_diffusion_equation} for $D =1$ and $v=1$ compared to the manufactured solution \ref{manifactured_solution_1D} without adding walkers. 
-Before the simulation we must find a source term so the manufactured solution will solve the equation.
-\begin{align*}
- -\pi^2\exp\left(-\pi^2t\right)\cos\left(\pi x\right) &= -\pi^2D\exp\left(-\pi^2t\right)\cos\left(\pi x\right) + \pi v \exp\left(-\pi^2t\right)\sin\left(\pi x\right) + f(x,t)\\
- -\pi^2\cos\left(\pi x\right) &= \pi^2D\cos\left(\pi x\right) +\pi v \sin\left(\pi x\right) + \tilde{f}(x) \\
- \tilde{f}(x) &= -\pi\sin\left(\pi x\right)
-\end{align*}
-Where $f(x,t) = \exp\left(-\pi^2t\right)\tilde{f}(x)$.
-
-\begin{figure}[H]
-\centering
-\begin{subfigure}[b]{0.48\textwidth}
-\includegraphics[width=\textwidth]{../doc/results/experiment_05112013_1235/results/deterministic_errorplot.eps}
-\caption{}
-\label{Verification_convection_diffusion:single_dt}
-\end{subfigure}
-\begin{subfigure}[b]{0.48\textwidth}
-\includegraphics[width=\textwidth]{../doc/results/experiment_05112013_1234/results/deterministic_errorplot.eps}
-\caption{}
-\label{Verification_convection_diffusion:double_dt}
-\end{subfigure}
-\caption[Verification of Convection diffusion equation implementation]{Verification of Convection diffusion equation implementation}
-\label{Verification_convection_diffusion}
-\end{figure}
-
-As we see from figure \ref{Verification_convection_diffusion} the error norm is halved when $\Delta t$ is roughly halved, just as we expected. It is also of the order of $\Delta t$, which is nice.  
-We can then advance to testing the effect of adding an area of walkers for different values of $Hc$ as before. 
-Note that we can no longer use the manufactured solution now if we wish to add drift to the walkers because we have forced the solution to fit the equation by tampering with the source term. 
-The effect of
-\begin{figure}[H]
-\centering
-\begin{subfigure}[b]{0.48\textwidth}
-\includegraphics[width=\textwidth]{../doc/results/experiment_05112013_1237/results/errorplot.eps}
-\caption{}
-\label{Errortest_convection_diffusion_walkers:few_walkers}
-\end{subfigure}
-\begin{subfigure}[b]{0.48\textwidth}
-\includegraphics[width=\textwidth]{../doc/results/experiment_05112013_1239/results/errorplot.eps}
-\caption{Adding more walkers still has the desired effect on the error, suggesting that the central limit theorem is at work behind the scenes.}
-\label{Errortest_convection_diffusion_walkers:more_walkers}
-\end{subfigure}
-\caption[Adding walkers influenced by drift]{The figure shows the effect adding walkers influenced by drift has on the error. 
-The drift term is the step length, which is quite large. The strangest thing is, however, that changing the direction of the drift has little effect on the error, suggesting that the drift term is completely wrong in relation to the steplength. $\Delta t =8e-5$}
-\label{Errortest_convection_diffusion_walkers}
-\end{figure}
-
-
-
